# certship

./: README.md  README_zh.md  pyproject.toml
.github/workflows/: release.yml
deploy/: aliyun_oss.py
src/: cli.py  core.py
src/certship/: cli.py  core.py
src/deploy/: aliyun_oss.py
